Add Docker support for local development environment
- Introduced `docker-compose.yml` to manage PostgreSQL and pgAdmin services for the CRM application.
- Created `.dockerignore` to specify files and directories to be ignored during Docker builds.
- Added `DOCKER.md` documentation detailing the setup and usage of Docker for local development.
- Updated `README.md` to include instructions for starting Docker services and verifying their status.
- Implemented development setup scripts for Unix and PowerShell to streamline the environment setup process.
- Enhanced `package.json` with new scripts for managing Docker services.
- Updated project structure documentation to reflect the addition of Docker-related files and scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ out/
 .env.production.local
 .env*.local
 
+# Docker
+.docker/
+docker-compose.override.yml
+
 # Logs
 logs/
 *.log
@@ -79,3 +83,5 @@ prisma/migrations/*.sql
 *.key
 *.cert
 
+
+/generated/prisma
