Implement Customer CRUD API with 3-layer architecture
- Added full CRUD operations for customer management, including endpoints for creating, reading, updating, and deleting customers.
- Established a 3-layer architecture (Controller, Service, Repository) to separate concerns and enhance maintainability.
- Integrated Zod for input validation and error handling, ensuring robust data integrity and user feedback.
- Created comprehensive API documentation detailing endpoint usage, request/response formats, and error handling.
- Updated project structure documentation to reflect the new customer-related files and routes.
- Implemented health check and customer count endpoints for improved API monitoring.

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,12 @@ Desktop.ini
 # TypeScript
 *.tsbuildinfo
 
+# Shared packages - ignore compiled output in src
+packages/*/src/**/*.js
+packages/*/src/**/*.d.ts
+packages/*/src/**/*.js.map
+packages/*/src/**/*.d.ts.map
+
 # Prisma
 prisma/migrations/*.sql
 !prisma/migrations/migration_lock.toml
