Update testing documentation and scripts for API changes
- Added mandatory testing instructions in `crm-rules.mdc` and `apps/api/.cursorrules` to ensure tests are run after any changes to the API.
- Enhanced `README.md` with detailed test commands and current test status, emphasizing the importance of maintaining test coverage.
- Updated `package.json` to include new test scripts for running tests, watching for changes, and generating coverage reports.
- Included `.vitest-cache/` in `.gitignore` to exclude cache files from version control.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts",
     "prisma:generate": "prisma generate",
@@ -28,6 +32,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
+    "@vitest/coverage-v8": "^4.0.8",
+    "@vitest/ui": "^4.0.8",
     "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
