--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,10 @@ packages/*/src/**/*.d.ts.map
 prisma/migrations/*.sql
 !prisma/migrations/migration_lock.toml
 
+# TSOA generated files
+apps/api/src/generated/routes.ts
+apps/api/src/generated/swagger.json
+
 # Temporary files
 *.tmp
 *.temp
