--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,8 +4,8 @@
   "description": "CRM Backend API",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
+    "dev": "pnpm tsoa:gen && ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "pnpm tsoa:gen && tsc",
     "start": "node dist/index.js",
     "test": "vitest",
     "test:watch": "vitest --watch",
@@ -14,6 +14,9 @@
     "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts",
+    "tsoa:gen": "tsoa spec-and-routes",
+    "tsoa:spec": "tsoa spec",
+    "tsoa:routes": "tsoa routes",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
@@ -23,18 +26,22 @@
   "dependencies": {
     "@crm/shared": "workspace:*",
     "@prisma/client": "^6.19.0",
+    "@tsoa/runtime": "^6.6.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "tsoa": "^6.6.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "@vitest/coverage-v8": "^4.0.8",
     "@vitest/ui": "^4.0.8",
     "prisma": "^6.19.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
