--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "pnpm tsoa:gen && ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:debug": "pnpm tsoa:gen && ts-node-dev --inspect --respawn --transpile-only src/index.ts",
     "build": "pnpm tsoa:gen && tsc",
     "start": "node dist/index.js",
     "test": "vitest",
