--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "dev:web": "pnpm --filter @crm/web dev",
     "build": "pnpm --filter \"@crm/*\" build",
     "test": "pnpm --filter \"@crm/*\" test",
-    "test:e2e": "pnpm --filter \"@crm/*\" test:e2e",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "lint": "pnpm --filter \"@crm/*\" lint",
     "type-check": "pnpm --filter \"@crm/*\" type-check",
     "docker:up": "docker-compose up -d",
@@ -20,5 +24,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.11.0"
+  "packageManager": "pnpm@10.11.0",
+  "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
+    "@playwright/test": "^1.56.1"
+  }
 }
