Enhance Docker configuration and improve development workflow
- Updated `.dockerignore` files across applications to exclude unnecessary files and directories, optimizing build performance.
- Introduced a new `docker-compose.dev.yml` for development overrides, enabling hot-reloading and debugging capabilities for both API and web services.
- Enhanced `docker-compose.yml` to include health checks and improved service definitions for API and web, ensuring better orchestration.
- Added new npm scripts in `package.json` for streamlined Docker commands, including build, up, down, and logs for both API and web services.
- Updated `README.md` and `DOCKER.md` to reflect new Docker commands and development setup instructions, improving clarity for developers.
- Implemented multi-stage Dockerfiles for both API and web applications, ensuring optimized production builds and non-root user execution.

--- a/package.json
+++ b/package.json
@@ -16,10 +16,20 @@
     "test:e2e:report": "playwright show-report",
     "lint": "pnpm --filter \"@crm/*\" lint",
     "type-check": "pnpm --filter \"@crm/*\" type-check",
+    "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
+    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
+    "docker:dev:build": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build",
     "docker:logs": "docker-compose logs -f",
-    "docker:reset": "docker-compose down -v && docker-compose up -d"
+    "docker:logs:api": "docker-compose logs -f api",
+    "docker:logs:web": "docker-compose logs -f web",
+    "docker:clean": "docker-compose down -v --remove-orphans",
+    "docker:reset": "docker-compose down -v && docker-compose build && docker-compose up -d",
+    "docker:ps": "docker-compose ps",
+    "docker:restart": "docker-compose restart",
+    "docker:restart:api": "docker-compose restart api",
+    "docker:restart:web": "docker-compose restart web"
   },
   "keywords": [],
   "author": "",
