--- a/.dockerignore
+++ b/.dockerignore
@@ -1,49 +1,62 @@
-# Dependencies
+# Node modules (all workspaces)
 node_modules/
-.pnp
-.pnp.js
+**/node_modules/
+apps/*/node_modules/
+packages/*/node_modules/
 
 # Build outputs
 dist/
 build/
-.next/
-out/
+**/dist/
+**/build/
+*.tsbuildinfo
 
-# Environment variables
+# Environment files
 .env
 .env.local
-.env*.local
+.env.*.local
+apps/**/.env
+apps/**/.env.local
 
 # Logs
 logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+**/*.log
+apps/api/logs/
 
 # Testing
 coverage/
 .nyc_output/
+*.lcov
+.vitest/
+.vitest-cache/
+playwright-report/
+test-results/
+e2e/
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
+.DS_Store
 
 # Git
 .git/
 .gitignore
-
-# Docker
-Dockerfile
-docker-compose*.yml
-.dockerignore
+.gitattributes
 
 # Documentation
 *.md
-!README.md
+docs/
+
+# Docker
+.dockerignore
+docker-compose*.yml
 
 # Misc
-.DS_Store
-*.pem
-
+.cache/
+temp/
+tmp/
+*.tmp
