--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,7 +32,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
+    "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.6.0",
+    "tsx": "^4.20.6",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.12"
@@ -46,7 +48,6 @@
     "@vitest/coverage-v8": "^4.0.8",
     "@vitest/ui": "^4.0.8",
     "prisma": "^6.19.0",
-    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
